2001-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): Fixed compilation problem
 	when compiling with Visual C++.

2001-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleQuantumToDouble): Add polymorphic
 	version that accepts double to avoid downconversion error.

2001-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleQuantumToDouble): Cast Quantum to
 	double prior to division.  Hopefully fix bug.

2001-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (Color(const std::string)): Pass argument by reference.
	* (operator=): Pass argument by const reference.
	
2001-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): New function to support
 	obtaining format coder information (as a list of type CoderInfo).

	* lib/CoderInfo.cpp (CoderInfo): New class to support obtaining
 	format coder information.

2001-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (depth): Use GetImageDepth and SetImageDepth
 	rather than just getting/setting depth attributes.

	* lib/Magick++/STL.h (opacityImage): New unary function object to
 	set, or attenuate, image pixel opacity throughout the image.

	* lib/Image.cpp (opacity): New method to set, or attenuate, image
 	pixel opacity throughout the image.

	* lib/Magick++/STL.h (typeImage): New unary function object to set
 	image type.

	* lib/Image.cpp (type): Added ability to set image type.

2001-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (write(Blob)): Tell blob to use malloc allocator.

	* lib/Blob.cpp (updateNoCopy): Added parameter so that user can
 	specify the allocation system (malloc or new) the memory came
 	from.  Defaults to C++ memory allocator.

2001-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fileSize): Decided to change return type to off_t